<resources>
    <string name="app_name">Pair Learn</string>
    <string name="test_button_text">Test Me</string>
    <string name="go_button_text">Go</string>
    <string name="correct_button_text">Correct</string>
    <string name="incorrect_button_text">Wrong</string>
    <string name="home_title">Pair Learn</string>
    <string name="test_setup_title">Setup Test</string>
    <string name="test_title">Testing</string>
    <string name="select_categories_button_text">Select Categories</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_no_words_selected_message">No words were selected</string>
    <string name="dialog_no_words_selected_title">No words selected</string>
    <string name="button_continue">Continue</string>
    <string name="edit_vocab_button">Edit Vocabulary</string>
    <string name="button_import_csv">Import CSV</string>
    <string name="dialog_import_failed_message">CSV Import failed</string>
    <string name="dialog_import_failed_title">Import CSV</string>
    <string name="category_picker_title">Pick categories</string>
    <string name="category_open_title">Select category to edit</string>
    <string name="dialog_initial_data_read_failed_title">Data read failed</string>
    <string name="dialog_initial_data_read_failed_message">Failed to read vocabulary data. The application will exit.</string>
    <string name="dialog_edit_word_message">Enter the modified word</string>
    <string name="dialog_edit_word_title">Modify word</string>
    <string name="edit_category_title">Edit words</string>
    <string name="add_button_text">+</string>
    <string name="dialog_add_category_title">Add category</string>
    <string name="default_right_word">word2</string>
    <string name="default_left_word">word1</string>
    <string name="left_word_label">Word 1</string>
    <string name="right_word_label">Word 2</string>
    <string name="edit_word_pair_title">Edit word pair</string>
    <string name="dialog_string_empty_message">The value cannot be empty</string>
    <string name="dialog_string_empty_title">Input empty</string>
    <string name="dialog_string_contains_comma_message">Entries cannot contain commas</string>
    <string name="dialog_string_contains_comma_title">Comma found</string>
    <string name="add_word_pair_title">Add word pair</string>
    <string name="button_export_csv">Export CSV</string>
    <string name="dialog_save_failed_message">Save failed</string>
    <string name="dialog_save_failed_title">Save failed</string>
    <string name="time_limit_label">Time limit (seconds)</string>
    <string name="dialog_invalid_time_limit_message">Time limit must be a positive number</string>
    <string name="dialog_invalid_time_limit_title">Invalid time limit</string>
    <string name="saved_time_limit" translatable="false">com.github.bwindsor.pairlearnapp.saved_time_limit</string>
    <string name="saved_selected_categories" translatable="false">com.github.bwindsor.pairlearnapp.saved_selected_categories</string>
    <string name="checkbox_reverse_direction">Reverse test direction</string>
    <string name="saved_reverse_direction" translatable="false">com.github.bwindsor.pairlearnapp.saved_reverse_direction</string>
    <string name="setup_test_correct_count_text">Correct less than</string>
    <string name="setup_test_correct_count_text2">times</string>
    <string name="saved_max_times_correct" translatable="false">com.github.bwindsor.pairlearnapp.saved_max_times_correct</string>
    <string name="dialog_invalid_times_correct_message">You should be correct less than a positive whole number of times</string>
    <string name="dialog_invalid_times_correct_title">Invalid times correct limit</string>
</resources>
